Attempt to fix broken CSS

--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -180,7 +180,7 @@ tr:last-child td, .tableLastRowRoundBottomLeft td, .tableLastRowRoundBottomRight
 .companyListTable {
     width: 100px;
 }
-.companyListInfo {/*
+/*.companyListInfo {
     width: 50px;
 }*/
 /**
